# Lama

./: .dockerignore  .gitignore  .travis.yml  Changes  Dockerfile  Lama.opam  Makefile  README.md  TODO.md  deploy_build.sh  dune-project  lama.tif  opam  test.lama
.github/workflows/: blank.yml
bench/: .gitignore  Makefile  README.md  bench_main.ml  demo.lama  demo_infix.ml  p.ml  pp_default.m4  pp_gt.m4
byterun/: .gitignore  Makefile  bytecommon.h  byterun.c  dune  interpreter.c  interpreter.cpp
doc/: 01.tex  02.tex  03.tex  04.tex  05.tex  06.tex  07.tex  lectures.out  lectures.tex
doc/lectures/: 01.tex  02.tex  05.tex  06.tex  08.tex
doc/spec/: 01.general_characteristic.tex  01.introduction.tex  03.01.lexical_structure.tex  03.02.compilation_units.tex  03.03.scope_expressions.tex  03.04.expressions.tex  03.concrete_syntax.tex  04.driver_options.tex  04.extensions.tex  05.driver_options.tex  06.standard_library.tex  Makefile  lama-spec.bib  spec.bib  spec.tex
gdb/: .gdbinit
lama-compiler/: Makefile  README.md
lama-compiler/regression/: Makefile  test001.lama  test002.lama  test003.lama  test004.lama  test006.lama  test008.lama  test009.lama  test010.lama  test011.lama  test012.lama  test013.lama  test014.lama  test015.lama  test016.lama  test017.lama  test018.lama  test019.lama  test020.lama  test021.lama  test022.lama  test023.lama  test024.lama  test025.lama  test026.lama  test027.lama  test028.lama  test029.lama  test030.lama  test031.lama  test037.lama  test038.lama  test039.lama  test040.lama  test042.lama  test044.lama  test045.lama  test055.lama  test056.lama  test057.lama  (+5 more)
lama-compiler/runtime/: Makefile  runtime.c
lama-compiler/src/: Builtins.lama  Driver.lama  Expr.lama  Lexer.lama  Makefile  Manifest.lama  Parser.lama  SM.lama  State.lama  World.lama  X86.lama
performance/: .gitignore  Makefile  Sort.lama  dune
regression/: Makefile  common.ml  dune  gen.ml  new_test002.lama  new_test003.lama  t  t.lama  test.sh  test000.cmi  test000.cmx  test000.ml  test000.opt  test001.expr  test001.lama  test001.t  test002.expr  test002.lama  test002.t  test003.expr  test003.t  test004.expr  test004.t  test005.expr  test005.t  test006.expr  test006.t  test007.expr  test007.t  test008.expr  test008.t  test009.expr  test009.t  test010.expr  test010.t  test011.expr  test011.lama  test011.t  test012.expr  test012.lama  (+202 more)
regression/compilation-only/: Makefile  fail.lama  test113.lama
regression/deep-expressions/: Makefile  generated00000.expr  generated00000.input  generated00000.lama  generated00001.expr  generated00001.lama  generated00002.expr  generated00002.lama  generated00003.expr  generated00003.lama  generated00004.expr  generated00004.lama  generated00005.expr  generated00005.lama  generated00006.expr  generated00006.lama  generated00007.expr  generated00007.lama  generated00008.expr  generated00008.input  generated00008.lama  generated00009.expr  generated00009.input  generated00009.lama  generated00010.expr  generated00010.lama  generated00011.expr  generated00011.lama  generated00012.expr  generated00012.lama  generated00013.expr  generated00013.input  generated00013.lama  generated00014.expr  generated00014.lama  generated00015.expr  generated00015.input  generated00015.lama  generated00016.expr  generated00016.input  (+2516 more)
regression/expressions/: Makefile  gen.ml  generated00000.expr  generated00000.input  generated00000.lama  generated00001.expr  generated00001.input  generated00001.lama  generated00002.expr  generated00002.lama  generated00003.expr  generated00003.lama  generated00004.expr  generated00004.lama  generated00005.expr  generated00005.lama  generated00006.expr  generated00006.input  generated00006.lama  generated00007.expr  generated00007.lama  generated00008.expr  generated00008.lama  generated00009.expr  generated00009.lama  generated0000x.t  generated00010.expr  generated00010.input  generated00010.lama  generated00011.expr  generated00011.lama  generated00012.expr  generated00012.lama  generated00013.expr  generated00013.lama  generated00014.expr  generated00014.lama  generated00015.expr  generated00015.lama  generated00016.expr  (+22821 more)
regression/orig/: test000.log~
regression/x86only/: Lib01.expr  Lib02.expr  Lib03.expr  Makefile  t.expr  test001.expr  test002.expr  test003  test003.expr  test003.lama  test003.s  test004.expr  test004.lama  test005.expr  test006.expr  test007.expr  test007.i  test007.lama  test008.lama  (+1 more)
runtime/: .clang-format  Makefile  Std.i  TODO.md  dune  gc.c  gc.h  gc_runtime.s  printf.S  printf.s  runtime.c  runtime.h  runtime.s  runtime_common.h  test_main.c  test_util.s  testgc.expr  virt_stack.c  virt_stack.h
runtime32/: Makefile  dune  gr.dot  runtime.c
spec/: .gitignore  01.02.notation.tex  01.03.values.tex  01.introduction.tex  02.01.categories.tex  02.02.abstract_syntax.tex  02.03.operational_semantics.tex  02.04.wellformedness.tex  02.abstract_syntax_and_semantics.tex  03.01.lexical_structure.tex  03.02.compilation_units.tex  03.03.scope_expressions.tex  03.04.expressions.tex  03.concrete_syntax.tex  04.extensions.tex  05.driver_options.tex  06.debugging.tex  06.limitations.tex  06.standard_library.tex  07.debugging.tex  07.standard_library.tex  08.standard_library.tex  Makefile  lama-spec.bib  lama-spec.tex
src/: .depend  .gitignore  .ocamlformat-ignore  DSL.ml  Driver.ml  Embedding.ml  Expr.ml  Language.ml  Makefile  Options.ml  Pprinter.ml  SM.ml  Syntax.ml  TODO  X32.ml  X86.ml  X86_32.ml  X86_64.ml  dune  stdpath.ml  testgc.expr  version.ml
stdlib/: .gitignore  Array.expr  Array.lama  Buffer.lama  Collection.expr  Collection.lama  Data.lama  Expr.expr  Fun.expr  Fun.lama  Lazy.expr  Lazy.lama  List.expr  List.lama  Makefile  Matcher.expr  Matcher.lama  Ostap.expr  Ostap.lama  Random.lama  Ref.expr  Ref.lama  STM.lama  Timer.lama  dune  test01.expr
stdlib/x32/: dune
stdlib/x64/: dune
tools/: Makefile  README.md  demo1.lama  dune  gtd_main.ml  run.t  tool.ml
tutorial/: .gitignore  Expressions.lama  Functions.lama  Hello.lama  Makefile  PatternMatching.lama  Values.lama  dune  gen.ml
(+6276 files in other folders)
