opam-version: "2.0"
version: "1.20"

synopsis:    "Lama programming system"
maintainer:  "dboulytchev@gmail.com"
authors:     "dboulytchev@gmail.com"
homepage:    "https://github.com/JetBrains-Research/Lama"
bug-reports: "https://github.com/JetBrains-Research/Lama/issues"

depends: [
  "ocaml"       { >= "4.07.1" }
  "ocamlfind"   { build }
  "camlp5"      { >= "8.00.05"}
  "ostap"       { >= "0.5"}
  "GT"          { >= "0.5.0" }
]

build: [
  [make]
  [make "regression"] {with-test}
]
install: [make "install"]

depexts: [
  ["gcc-multilib"] {os-family = "debian"}
]

dev-repo: "git+https://github.com/JetBrains-Research/Lama.git"
url {
  src: "git+https://github.com/JetBrains-Research/Lama.git#1.10+ocaml4.10"
}
