opam-version: "2.0"
version: "1.30"

synopsis:    "Lama programming language"
maintainer:  "dboulytchev@gmail.com"
authors:     [
  "Dmitry Boulytchev <dboulytchev@gmail.com>"
  "Daniil Berezun <danya.berezun@gmail.com>"
  "Egor Sheremetov <egor.sheremetov.dev@gmail.com>"
]
homepage:    "https://github.com/PLTools/Lama"
bug-reports: "https://github.com/PLTools/Lama/issues"

depends: [
  "ocaml"       { >= "4.13.1" }
  "ocamlfind"   { build }
  "camlp5"      { >= "8.00.05" }
  "ostap"       { >= "0.5"}
  "GT"          { >= "0.5.1" }
  "posix-uname" {  = "2.0.2" }
]

build: [
  [make]
  [make "regression"] {with-test}
]
install: [make "install"]

dev-repo: "git+https://github.com/PLTools/Lama.git"
url {
  src: "git+https://github.com/PLTools/Lama.git#1.30"
}
