(rule
 (deps
  ../Makefile
  ../../runtime/Std.i
  ../List.lama
  ../Array.lama
  ../Buffer.lama
  ../Collection.lama
  ../Data.lama
  ../Fun.lama
  ../Lazy.lama
  ../List.lama
  ../Matcher.lama
  ../Ostap.lama
  ../Random.lama
  ../Ref.lama
  ../STM.lama
  ../Timer.lama
  %{project_root}/src/Driver.exe)
 (targets
  List.i
  List.o
  Buffer.i
  Buffer.o
  Collection.i
  Collection.o
  Data.i
  Data.o
  Fun.i
  Fun.o
  Lazy.i
  Lazy.o
  List.i
  List.o
  Matcher.i
  Matcher.o
  Ostap.i
  Ostap.o
  Random.i
  Random.o
  Ref.i
  Ref.o
  STM.i
  STM.o
  Timer.i
  Timer.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (setenv
    SRCDIR
    ".."
    ; (setenv
    ;  FILES
    ;  "List.lama Buffer.lama Collection.lama Data.lama Fun.lama"
    (setenv
     LAMA
     "../../runtime"
     (setenv
      LAMAC
      "../../src/Driver.exe -march=amd64 -I ../runtime32"
      (run make -j2 -f ../Makefile all)))))))

;)
