(rule
 (deps
  ../Makefile
  ../../runtime/Std.i
  ../Array.lama
  ../Buffer.lama
  ../Collection.lama
  ../Data.lama
  ../Fun.lama
  ../Lazy.lama
  ../List.lama
  ../Matcher.lama
  ../Ostap.lama
  ../Random.lama
  ../Ref.lama
  ../STM.lama
  ../Timer.lama
  %{project_root}/src/Driver.exe)
 (targets
  Array.i
  Array.o
  Buffer.i
  Buffer.o
  Collection.i
  Collection.o
  Data.i
  Data.o
  Fun.i
  Fun.o
  Lazy.i
  Lazy.o
  List.i
  List.o
  Matcher.i
  Matcher.o
  Ostap.i
  Ostap.o
  Random.i
  Random.o
  Ref.i
  Ref.o
  STM.i
  STM.o
  Timer.i
  Timer.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (setenv
    SRCDIR
    ".."
    (setenv
     LAMA
     "../../runtime"
     (setenv
      LAMAC
      "../../src/Driver.exe -64 -I ../../runtime"
      (run make -j2 -f ../Makefile all)))))))

(install
 (section share)
 (files
  (glob_files (*.i with_prefix x64))
  (glob_files (*.o with_prefix x64))))
